--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "plotly.js": "^3.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-globe.gl": "^2.33.2",
+    "react-plotly.js": "^2.6.0",
     "react-scripts": "5.0.1",
+    "three": "^0.176.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
